# autoware_tartan_bridge

./: .pre-commit-config.yaml  README.md
point_type_converter/: CMakeLists.txt  package.xml
point_type_converter/include/point_type_converter/: point_type_converter.hpp
point_type_converter/launch/: point_type_converter.launch.xml
point_type_converter/src/: point_type_converter.cpp
tartan_rosbag_launcher/: CMakeLists.txt  package.xml
tartan_rosbag_launcher/config/: player_params.yaml
tartan_rosbag_launcher/launch/: composable_play_bag_perception.launch.xml  play_bag_perception.launch.xml  play_bag_preception.launch.xml
